@@ -360,7 +360,7 @@
 	    <widget class="GtkCheckButton" id="checkbutton1">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
-	      <property name="label" translatable="yes">Do not show this dilog in next login.</property>
+	      <property name="label" translatable="yes">Do _not show this warning again.</property>
 	      <property name="use_underline">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
