@@ -126,5 +126,18 @@
 	<long>Show layout names instead of group names (only for versions of XFree supporting multiple layouts)</long>
       </locale>
     </schema>
+
+    <schema>
+      <key>/schemas/desktop/gnome/peripherals/keyboard/general/disable_sysconfig_changed_warning</key>
+      <applyto>/desktop/gnome/peripherals/keyboard/general/disable_sysconfig_changed_warning</applyto>
+      <owner>gnome</owner>    
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Suppress the "X sysconfig changed" warning message</short>
+	<long>Suppress the "X sysconfig changed" warning message</long>
+      </locale>
+    </schema>
+
   </schemalist>
 </gconfschemafile>
