@@ -1,3 +1,10 @@
+2005-02-06  Sergey V. Udaltsov <svu@gnome.org>
+
+	* schemas/desktop_gnome_peripherals_keyboard_xkb.schemas.in,
+	gnome-settings-daemon/gnome-settings-keyboard-xkb.c,
+	gnome-settings-daemon/modmap-dialog.glade: providing ability to
+	suppress the "x sysconfig changed" warning message, fixing #150435
+
 2005-02-03  Leena Gunda  <leena.gunda@wipro.com>
 
 	* configure.in: Check for screensaver functionality in libXext.so
